--- a/templates/index.html
+++ b/templates/index.html
@@ -18,16 +18,16 @@
 
     <form method="post" action="/predict">
         <label for="sepal_length">Sepal length:</label>
-        <input type="number" name="sepal_length" id="sepal_length" required>
+        <input type="float" name="sepal_length" id="sepal_length" required>
         <br>
         <label for="sepal_width">Sepal width:</label>
-        <input type="number" name="sepal_width" id="sepal_width" required>
+        <input type="float" name="sepal_width" id="sepal_width" required>
         <br>
         <label for="petal_length">Petal length:</label>
-        <input type="number" name="petal_length" id="petal_length" required>
+        <input type="float" name="petal_length" id="petal_length" required>
         <br>
         <label for="petal_width">Petal width:</label>
-        <input type="number" name="petal_width" id="petal_width" required>
+        <input type="float" name="petal_width" id="petal_width" required>
         <br>
         <button type="submit">Predict</button>
     </form>
