--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -29,7 +29,8 @@
 
 
         <br><br>
-    <a href='/'>Go back to home page</a>
+    <a href='/'>Go back to home page</a><br>
+    <br><a href='/all_result'>All Result</a>
     </center>
 
 </body>
